# music_sync

./: README.md
cbf/: Cargo.toml  README.md
cbf/src/: lib.rs
client/: .gitignore  Cargo.toml
client/src/: main.rs
server/: .gitignore  Cargo.toml  config.conf
server/src/: main.rs
utils/: Cargo.toml  README.md
utils/src/: cbf.rs  encryption.rs  lib.rs  split_strings.rs
