[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
lz4_flex = { version = "0.11.3", default-features = false }
actix-web = "4"
zstd = "0.13.2"
utils = { path = "../utils" }
mimalloc = "0.1.43"
tokio = { version = "1", default-features = false, features = ["fs"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
